--- a/style/style.css
+++ b/style/style.css
@@ -10,3 +10,26 @@ header{
     background-color: #D9D6D2;
     height: 290px;
 }
+
+/* =====NAVBAR===== */
+
+.navbar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.navbar #logo{
+    font-size: 25px;
+    margin: 5px;
+}
+
+.navbar a{
+    text-decoration: none;
+    color: #000;
+    font-size: 25px;
+    margin: 5px;
+}
+
+/* =====TODO NAME===== */
