--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 }
 
 header{
+    position: relative;
     background-color: #D9D6D2;
     height: 290px;
 }
@@ -14,6 +15,8 @@ header{
 /* =====NAVBAR===== */
 
 .navbar{
+    position: relative;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -33,3 +36,71 @@ header{
 }
 
 /* =====TODO NAME===== */
+
+.todo-name{
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70%; */
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 120px;
+
+
+.name-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.name-btn h1{
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    letter-spacing: 6px;
+    font-size: 1.2rem;
+
+}
+
+.name-btn .sun-button{
+    border: none;
+    font-size: 25px;
+    cursor: pointer;
+    
+}
+
+
+.todo-add{
+    margin-top: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: ;
+}
+
+.todo-add .add-name{
+    background-color: transparent;
+    padding: 2px 5px;
+    border: 1px solid #393B50;
+    border-top: none;
+    display: flex;
+    flex-grow: 1;
+
+    
+}
+
+.todo-add .btn-add{
+    background-color: #393B50;
+    color: #D9D6D2;
+    font-size: 20px;
+    margin-left: 5px;
+    
+    
+    width: 19px;
+    height: 19px;
+    border: none;
+}
