--- a/style/style.css
+++ b/style/style.css
@@ -2,14 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
+    
     padding: 0;
     margin: 0;
+}
+
+body{
+    background-color: #161722;
 }
 
 header{
     position: relative;
     background-color: #D9D6D2;
-    height: 290px;
+    height: 250px;
 }
 
 /* =====NAVBAR===== */
@@ -38,10 +43,6 @@ header{
 /* =====TODO NAME===== */
 
 .todo-name{
-    /* display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70%; */
 
     position: absolute;
     top: 50%;
@@ -49,7 +50,7 @@ header{
     transform: translate(-50%, -50%);
     width: 400px;
     height: 120px;
-
+}
 
 .name-btn{
     display: flex;
@@ -94,7 +95,15 @@ header{
     
 }
 
+.add-name:focus{
+    outline: none;
+}
+
 .todo-add .btn-add{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     background-color: #393B50;
     color: #D9D6D2;
     font-size: 20px;
@@ -104,4 +113,5 @@ header{
     width: 19px;
     height: 19px;
     border: none;
+    cursor: pointer;
 }
