--- a/style/style.css
+++ b/style/style.css
@@ -141,10 +141,10 @@ header{
     color: var(--color1);
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 250px;
+    justify-content: space-between;
     margin: 0 auto;
     margin-top: 12px;
+    padding: 0 10px;
     
 
     width: 688px;
