--- a/style/style.css
+++ b/style/style.css
@@ -154,7 +154,7 @@ header{
 .container-todo .todo h3{
     text-align: center;
     font-family: "Poppins", sans-serif;
-    font-weight: lighter;
+    font-weight: normal;
 }
 
 .todo i{
@@ -189,7 +189,6 @@ header{
 .done h3{
     text-decoration: line-through;
     color: var(--color2);
-    
 }
 
 .done button i{
